--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Python package
+name: Picon Covert
 
 on: [push]
 
@@ -18,8 +18,6 @@ jobs:
         path: picons-source
     - name: Checkout
       uses: actions/checkout@v2
-      with:
-        path: main
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v2
       with:
