--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
     - uses: actions/checkout@v2
     - uses: actions/checkout@v2
       with:
-        repository: reuab/picons-source
+        repository: picons/picons
         path: picons-source
     - run: ls
     - name: Set up Python ${{ matrix.python-version }}
