--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,10 @@
 name: Picon Covert
 
-on: [push]
-
+on:
+  push:
+  schedule:
+    - cron: '0 0 * * *' # Once per day at midnight
+           
 jobs:
   build:
 
