--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,5 +36,5 @@ jobs:
         git config user.name github-actions
         git config user.email github-actions@github.com
         git add picons
-        git commit -m "generated"
+        git diff --quiet && git diff --staged --quiet || git commit -am 'generated'
         git push
